# Epitech-RType

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.txt  deploy_and_build.sh  deploy_to_daemonset.sh  install_linux.sh  install_windows.ps1  redeploy.sh
client/: CMakeLists.txt  bootstrap_exemple.cpp  client.vcxproj  client.vcxproj.filters  main.cpp
client/client.dir/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
client/include/client/core/: client.hpp  game_state.hpp  input_manager.hpp  message_dispatcher.hpp  ping_manager.hpp  player.hpp  renderer.hpp  screen_manager.hpp  time_manager.hpp
client/include/client/engine/: ecs_alias.hpp  game_engine.hpp  game_state.hpp
client/src/: _main.cpp  main.cpp
client/src/core/: client.cpp  game_state.cpp  message_dispatcher.cpp  ping_manager.cpp  renderer.cpp
client/src/engine/: game_engine.cpp  game_state.cpp
ecs_lib/: CMakeLists.txt
ecs_lib/examples/: CMakeLists.txt  basic_example.cpp
ecs_lib/include/ecs/: registry.hpp  sparse_array.hpp  zipper.hpp
network_lib/: CMakeLists.txt
network_lib/include/network/: client.hpp  client_connection.hpp  concurrent_queue.hpp  connection.hpp  connection_interface.hpp  network_client.hpp  network_server.hpp  owned_packet.hpp  protocol.hpp  server.hpp  server_connection.hpp  tcp_client_connection.hpp  tcp_connection.hpp  tcp_connection_interface.hpp  tcp_server_connection.hpp  udp_connection.hpp
network_lib/include/network/tcp/: tcp_client_connection.hpp  tcp_connection.hpp  tcp_connection_interface.hpp  tcp_server_connection.hpp
network_lib/include/network/udp/: udp_client_connection.hpp  udp_connection.hpp  udp_connection_interface.hpp  udp_server_connection.hpp
network_lib/src/: connection.cpp
new_ecs_lib/: CMakeLists.txt
new_ecs_lib/examples/: CMakeLists.txt  basic_example.cpp
new_ecs_lib/include/new_ecs/: registry.hpp  sparse_array.hpp  zipper.hpp
rtype-client/: CMakeLists.txt
rtype-client/include/core/: components.hpp  controller.hpp  event_queue.hpp  event_type.hpp  game_state.hpp  input_manager.hpp  main_server.hpp  main_server.tpp  message_dispatcher.hpp  message_dispatcher.tpp  my_packet_types.hpp  packet_factory.hpp  packet_factory.tpp  player_actions.hpp  protocol.hpp  renderer.hpp  resource_manager.hpp  service_locator.hpp
rtype-client/include/engine/: ecs_alias.hpp
rtype-client/include/scenes/: create_lobby_scene.hpp  game_scene.hpp  lobby_password_scene.hpp  lobby_scene.hpp  login_scene.hpp  main_menu_scene.hpp  register_scene.hpp  scene.hpp  scene_manager.hpp
rtype-client/include/ui/: button.hpp  chat_overlay.hpp  text.hpp  text_box.hpp  text_link.hpp  ui_element.hpp
rtype-client/src/: main.cpp
rtype-client/src/core/: game_state.cpp  renderer.cpp
rtype-client/src/scenes/: create_lobby_scene.cpp  game_scene.cpp  lobby_password_scene.cpp  lobby_scene.cpp  login_scene.cpp  main_menu_scene.cpp  register_scene.cpp
rtype-client/src/ui/: chat_overlay.cpp  text_box.cpp
rtype-core/: CMakeLists.txt
rtype-core/include/database/dao/: lobby_dao.hpp  lobby_player_dao.hpp  message_dao.hpp  user_dao.hpp
rtype-core/include/domain/entities/: lobby.hpp  message.hpp  user.hpp
rtype-core/include/domain/repositories/: lobby_player_repository.hpp  lobby_player_repository_interface.hpp  lobby_repository.hpp  lobby_repository_interface.hpp  message_repository.hpp  message_repository_interface.hpp  user_repository.hpp  user_repository_interface.hpp
rtype-core/include/domain/services/: lobby_player_service.hpp  lobby_service.hpp  message_service.hpp  user_service.hpp
rtype-core/include/rtype-core/: event_queue.hpp  event_type.hpp  game_network_server.tpp  game_state.hpp  main_server.tpp  message_dispatcher.tpp  my_packet_types.hpp  packet_factory.hpp  packet_factory.tpp  protocol.hpp  service_container.hpp
rtype-core/include/rtype-core/handlers/: create_lobby_handler.hpp  get_lobby_list_handler.hpp  get_lobby_players_handler.hpp  get_user_list_handler.hpp  join_lobby_handler.hpp  leave_lobby_handler.hpp  player_ready_handler.hpp  private_message_handler.hpp  user_login_handler.hpp  user_register_handler.hpp
rtype-core/src/: main.cpp
rtype-core/src/database/: database.cpp
rtype-core/src/database/dao/: lobby_dao.cpp  lobby_player_dao.cpp  message_dao.cpp  user_dao.cpp
rtype-core/src/database/migrations/: 002_create_channels.sql  005_create_messages.sql
rtype-core/src/domain/repositories/: lobby_player_repository.cpp  lobby_repository.cpp  message_repository.cpp  user_repository.cpp
rtype-core/src/domain/services/: lobby_player_service.cpp  lobby_service.cpp  message_service.cpp  user_service.cpp
rtype-game/: CMakeLists.txt
rtype-game/include/database/: database.hpp
rtype-game/include/rtype-core/: controller.hpp  game_state.hpp  lobby_manager.hpp  main_server.hpp  message_dispatcher.tpp  packet_factory.tpp  protocol.hpp  service_container.hpp
rtype-game/include/rtype-game/: components.hpp  event_type.hpp  game_network_server.hpp  game_network_server.tpp  main_server.hpp  main_server.tpp  message_dispatcher.hpp  message_dispatcher.tpp  my_packet_types.hpp  network_messages.hpp  packet_factory.hpp  packet_factory.tpp  player_actions.hpp  protocol.hpp  service_container.hpp
rtype-game/src/: game_state.cpp  main.cpp
rtype-game/src/database/dao/: lobby_dao.cpp  (+1 more)
rtype-game/src/engine/: game_engine.cpp  game_state.cpp
server/: CMakeLists.txt  server.vcxproj  server.vcxproj.filters
server/include/game/: custom_network_server.hpp  game_logic.hpp  game_server.hpp  game_state.hpp  message_dispatcher.hpp  player.hpp
server/server.dir/Debug/: server.exe.recipe  server.ilk
server/src/: game_state.cpp  main.cpp  message_dispatcher.cpp
server/src/core/: custom_network_server.cpp  message_dispatcher.cpp
server/src/engine/: game_engine.cpp  game_state.cpp
shared/: CMakeLists.txt
shared/include/shared/: components.hpp  my_packet_types.hpp  network_messages.hpp  player_actions.hpp  vector2.hpp  vector3.hpp
(+115 files in other folders)
